# duckdb_delta

./: .gitmodules  CMakeLists.txt  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  _extension_distribution.yml
src/include/: delta_kernel_ffi.h  delta_kernel_ffi.hpp
